Add handlers for /health, /ready and /info

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "App": {
+    "Name": "DWT",
+    "Version": "0.0.0",
+    "Description": "Dotnet Web API Template",
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
