--- a/appsettings.json
+++ b/appsettings.json
@@ -2,13 +2,15 @@
   "App": {
     "Name": "DWT",
     "Version": "0.0.0",
-    "Description": "Dotnet Web API Template",
+    "Description": "Dotnet Web API Template"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  
   "AllowedHosts": "*"
 }
