Add private key & cert

--- a/appsettings.json
+++ b/appsettings.json
@@ -12,5 +12,16 @@
     }
   },
 
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  // Cryptography keys
+  "Keys": {
+    // Path to the PFX file and password to open it. The PFX file must contain a RSA private key.
+    "RSAPFXFile": "./config/cert.pfx",
+    "RSAPFXPassword": "S2cretP2ssword",
+
+    // Or, path to the RSA private key file. The file must be in PEM format.
+    // Note: if both RSAPFXFile and RSAPrivKeyFile are provided, RSAPFXFile will take precedence.
+    "RSAPrivKeyFile": "./config/private-key.pem"
+  }
 }
