--- a/appsettings.json
+++ b/appsettings.json
@@ -23,5 +23,13 @@
     // Or, path to the RSA private key file. The file must be in PEM format.
     // Note: if both RSAPFXFile and RSAPrivKeyFile are provided, RSAPFXFile will take precedence.
     "RSAPrivKeyFile": "./config/private-key.pem"
-  }
+  },
+
+  // List of bootstrappers. Bootstrappers are invoked in the order defined here.
+  // - If a bootstrapper fails, the whole bootstrapping process will also fail and the application will not start.
+  // - If a bootstrapper is async, it will be invoked in the background and its failure will not stop the bootstrapping process.
+  "Bootstrappers": [
+    "dwt.CryptoKeysBootstrapper",
+    "dwt.SampleAuthenticatorAsyncBootstrapper"
+  ]
 }
