Global error handler middleware and JWT support

--- a/appsettings.json
+++ b/appsettings.json
@@ -14,6 +14,14 @@
 
   "AllowedHosts": "*",
 
+  // List of bootstrappers. Bootstrappers are invoked in the order defined here.
+  // - If a bootstrapper fails, the whole bootstrapping process will also fail and the application will not start.
+  // - If a bootstrapper is async, it will be invoked in the background and its failure will not stop the bootstrapping process.
+  "Bootstrappers": [
+    "dwt.CryptoKeysBootstrapper",
+    "dwt.SampleAuthenticatorAsyncBootstrapper"
+  ],
+
   // Cryptography keys
   "Keys": {
     // Path to the PFX file and password to open it. The PFX file must contain a RSA private key.
@@ -25,11 +33,11 @@
     "RSAPrivKeyFile": "./config/private-key.pem"
   },
 
-  // List of bootstrappers. Bootstrappers are invoked in the order defined here.
-  // - If a bootstrapper fails, the whole bootstrapping process will also fail and the application will not start.
-  // - If a bootstrapper is async, it will be invoked in the background and its failure will not stop the bootstrapping process.
-  "Bootstrappers": [
-    "dwt.CryptoKeysBootstrapper",
-    "dwt.SampleAuthenticatorAsyncBootstrapper"
-  ]
+  "Jwt": {
+    "Issuer": "dotnet-webapi-template",
+    "Audience": "http://localhost:8080",
+    "Expiration": 3600, // default expiration time in seconds
+    "Key": "S3cretK3yP@dd1ngzJh^H/9V+q),c'8I", // (min size = 32 bytes) if not empty the JWT will be signed with this key using HMACSHA256; otherwise, it will be signed with the RSA private key using RSASHA256
+    "": ""
+  }
 }
