Controller to handle users API

--- a/appsettings.json
+++ b/appsettings.json
@@ -19,6 +19,7 @@
   // - If a bootstrapper is async, it will be invoked in the background and its failure will not stop the bootstrapping process.
   "Bootstrappers": [
     "dwt.CryptoKeysBootstrapper",
+    "dwt.JwtBootstrapper",
     "dwt.SampleAuthenticatorAsyncBootstrapper"
   ],
 
@@ -37,7 +38,36 @@
     "Issuer": "dotnet-webapi-template",
     "Audience": "http://localhost:8080",
     "Expiration": 3600, // default expiration time in seconds
-    "Key": "S3cretK3yP@dd1ngzJh^H/9V+q),c'8I", // (min size = 32 bytes) if not empty the JWT will be signed with this key using HMACSHA256; otherwise, it will be signed with the RSA private key using RSASHA256
+    //"Key": "S3cretK3yP@dd1ngzJh^H/9V+q),c'8I", // (min size = 32 bytes) if not empty the JWT will be signed with this key using HMACSHA256; otherwise, it will be signed with the RSA private key using RSASHA256
     "": ""
-  }
+  },
+
+  // Sample user database
+  "Users": [
+    {
+      "id": "admin",
+      "password": "@dminS3cret",
+      "role": "ADMIN" // role can be a single role or a comma-separated list of roles
+    },
+    {
+      "id": "manager",
+      "password": "M@nagerS3cret",
+      "role": "MANAGER"
+    },
+    {
+      "id": "hrstaff",
+      "password": "St@ffS3cret",
+      "role": "HR"
+    },
+    {
+      "id": "itstaff",
+      "password": "St@ffS3cret",
+      "role": "IT"
+    },
+    {
+      "id": "auditstaff",
+      "password": "St@ffS3cret",
+      "role": "HR,IT"
+    }
+  ]
 }
