Add Note features

--- a/appsettings.json
+++ b/appsettings.json
@@ -14,6 +14,10 @@
 
   "AllowedHosts": "*",
 
+  "ConnectionStrings": {
+    "NotesDbContext": "Data Source=./data/sqlite/todo.db"
+  },
+
   // List of bootstrappers. Bootstrappers are invoked in the order defined here.
   // - If a bootstrapper fails, the whole bootstrapping process will also fail and the application will not start.
   // - If a bootstrapper is async, it will be invoked in the background and its failure will not stop the bootstrapping process.
