--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,8 +16,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        dotnet: [ '8.x' ]
-    name: Run tests with Go ${{ matrix.go }}
+        dotnet: [ '8.x', '9.x' ]
+    name: Run tests with dotnet ${{ matrix.dotnet }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -33,8 +33,8 @@ jobs:
         run: dotnet build --no-restore ${{ env.PROJ_FILE }}
       - name: Test
         run: dotnet test --no-restore ${{ env.PROJ_FILE }}
-      - name: Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          fail_ci_if_error: true
-          token: ${{ secrets.CODECOV_TOKEN }}
+      # - name: Codecov
+      #   uses: codecov/codecov-action@v4
+      #   with:
+      #     fail_ci_if_error: true
+      #     token: ${{ secrets.CODECOV_TOKEN }}
