--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,6 +41,7 @@ jobs:
       #     token: ${{ secrets.CODECOV_TOKEN }}
 
   TestDockerfile:
+    needs: BuildAndTest
     runs-on: ubuntu-latest
     name: Test Dockerfile
     steps:
@@ -61,6 +62,7 @@ jobs:
 
   ReleaseDryRun:
     if: github.event_name == 'push'
+    needs: BuildAndTest
     runs-on: ubuntu-latest
     outputs:
       RESULT: ${{ steps.release_dry_run.outputs.result }}
