--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,6 +55,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           # platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,windows/amd64
           push: false
           tags: test
           file: ./Dockerfile
