--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -5,6 +5,8 @@ on:
     branches: [ '*' ]
   pull_request:
     branches: [ '*' ]
+  exclude:
+    - path: '.github/'
   schedule:
     # run every Saturday at 00:00 UTC
     - cron: '0 0 * * 6'
