CI: fix Docker build

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,8 +54,7 @@ jobs:
       - name: Build docker image
         uses: docker/build-push-action@v6
         with:
-          # platforms: linux/amd64,linux/arm64
-          platforms: linux/arm64
+          platforms: linux/amd64,linux/arm64
           push: false
           tags: test
           file: ./Dockerfile
