--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,8 +45,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        platorms: [ 'linux/amd64', 'linux/arm64' ]
-    name: Test build Docker image for ${{ matrix.platforms }}
+        platforms: [ 'linux/amd64', 'linux/arm64' ]
+    name: Test building Docker images for Linux
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -54,7 +54,7 @@ jobs:
       #   uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Build docker image
+      - name: Build Docker image for ${{ matrix.platforms }}
         uses: docker/build-push-action@v6
         with:
           platforms: ${{ matrix.platforms }}
