--- a/Dockerfile.win
+++ b/Dockerfile.win
@@ -3,7 +3,7 @@
 
 ARG DOTNETVERSION=8.0
 
-FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:$DOTNETVERSION-alpine AS build
+FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:$DOTNETVERSION-nanoserver-1809 AS build
 
 COPY . /source
 WORKDIR /source
@@ -29,7 +29,7 @@ RUN --mount=type=cache,id=nuget,target=/root/.nuget/packages \
 # If you need to enable globalization and time zones:
 # https://github.com/dotnet/dotnet-docker/blob/main/samples/enable-globalization.md
 
-FROM mcr.microsoft.com/dotnet/aspnet:$DOTNETVERSION-alpine AS final
+FROM mcr.microsoft.com/dotnet/aspnet:$DOTNETVERSION-nanoserver-1809 AS final
 WORKDIR /app
 
 COPY --from=build /app ./
@@ -38,15 +38,6 @@ COPY ./data ./data
 
 # Create a non-privileged user that the app will run under.
 # See https://docs.docker.com/go/dockerfile-user-best-practices/
-ARG UID=10001
-RUN adduser \
-    --disabled-password \
-    --gecos "" \
-    --home "/nonexistent" \
-    --shell "/sbin/nologin" \
-    --no-create-home \
-    --uid "${UID}" \
-    appuser
 USER appuser
 
 # Default port for dotnet application
