--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -72,9 +72,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v3
+        # uses: docker/setup-buildx-action@v3
       - name: Build Docker image for ${{ matrix.platforms }}
-        uses: docker/build-push-action@v6
+        # Use mr-smithers-excellent/docker-build-push@v6 as docker/build-push-action@v6 does not support Windows yet
+        # Monitor this issue https://github.com/docker/build-push-action/issues/18
+        # uses: docker/build-push-action@v6
+        uses: mr-smithers-excellent/docker-build-push@v6
         with:
           platforms: ${{ matrix.platforms }}
           push: false
