--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -79,7 +79,7 @@ jobs:
         # uses: docker/build-push-action@v6
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
-          platforms: ${{ matrix.platforms }}
+          platform: ${{ matrix.platforms }}
           push: false
           tags: test
           file: ./Dockerfile.win
