--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -80,6 +80,7 @@ jobs:
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
           platform: ${{ matrix.platforms }}
+          registry: test
           image: test
           tags: test
           pushImage: false
