CI: fix Docker build

--- a/Dockerfile.win
+++ b/Dockerfile.win
@@ -3,7 +3,7 @@
 
 ARG DOTNETVERSION=8.0
 
-FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:$DOTNETVERSION-nanoserver-1809 AS build
+FROM mcr.microsoft.com/dotnet/sdk:$DOTNETVERSION-nanoserver-1809 AS build
 
 COPY . /source
 WORKDIR /source
@@ -11,6 +11,8 @@ WORKDIR /source
 # This is the architecture you’re building for, which is passed in by the builder.
 # Placing it here allows the previous steps to be cached across architectures.
 ARG TARGETARCH
+
+RUN echo "I am running on $BUILDPLATFORM, building for $TARGETPLATFORM / $TARGETARCH"
 
 # This is the project name, used to build the application.
 # Change this to match the name of your project.
