--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,7 +66,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        platforms: [ 'windows/amd64', 'windows/arm64' ]
+        platforms: [ 'windows/amd64' ]
     name: Test building Docker images for Windows
     steps:
       - name: Checkout code
