CI: fix Docker build

--- a/Dockerfile.win
+++ b/Dockerfile.win
@@ -3,7 +3,8 @@
 
 ARG DOTNETVERSION=8.0
 
-FROM mcr.microsoft.com/dotnet/sdk:$DOTNETVERSION-nanoserver-1809 AS build
+# FROM mcr.microsoft.com/dotnet/sdk:$DOTNETVERSION-nanoserver-1809 AS build
+FROM mcr.microsoft.com/dotnet/sdk:$DOTNETVERSION-windowsservercore-ltsc2019 AS build
 
 COPY . /source
 WORKDIR /source
@@ -12,38 +13,33 @@ WORKDIR /source
 # Placing it here allows the previous steps to be cached across architectures.
 ARG TARGETARCH
 
-RUN echo "I am running on $BUILDPLATFORM, building for $TARGETPLATFORM / $TARGETARCH"
-
 # This is the project name, used to build the application.
 # Change this to match the name of your project.
 ARG PROJECT=dwt
 
 # Build the application.
-# Leverage a cache mount to /root/.nuget/packages so that subsequent builds don't have to re-download packages.
-RUN echo TARGETARCH: ${TARGETARCH}
-RUN --mount=type=cache,id=nuget,target=/root/.nuget/packages \
-    dotnet restore -a ${TARGETARCH} ${PROJECT}.csproj
-RUN --mount=type=cache,id=nuget,target=/root/.nuget/packages \
-    dotnet publish ${PROJECT}.csproj -a ${TARGETARCH} --no-restore -o /app
+RUN echo "I am running on %BUILDPLATFORM%, building for %TARGETPLATFORM% / %TARGETARCH%"
+RUN dotnet restore -a ${TARGETARCH} ${PROJECT}.csproj
+# RUN dotnet publish ${PROJECT}.csproj -a ${TARGETARCH} --no-restore -o /app
 
-################################################################################
+# ################################################################################
 
-# If you need to enable globalization and time zones:
-# https://github.com/dotnet/dotnet-docker/blob/main/samples/enable-globalization.md
+# # If you need to enable globalization and time zones:
+# # https://github.com/dotnet/dotnet-docker/blob/main/samples/enable-globalization.md
 
-FROM mcr.microsoft.com/dotnet/aspnet:$DOTNETVERSION-nanoserver-1809 AS final
-WORKDIR /app
+# FROM mcr.microsoft.com/dotnet/aspnet:$DOTNETVERSION-nanoserver-1809 AS final
+# WORKDIR /app
 
-COPY --from=build /app ./
-COPY ./config ./config
-COPY ./data ./data
+# COPY --from=build /app ./
+# COPY ./config ./config
+# COPY ./data ./data
 
-# Create a non-privileged user that the app will run under.
-# See https://docs.docker.com/go/dockerfile-user-best-practices/
-USER appuser
+# # Create a non-privileged user that the app will run under.
+# # See https://docs.docker.com/go/dockerfile-user-best-practices/
+# USER appuser
 
-# Default port for dotnet application
-EXPOSE 8080
+# # Default port for dotnet application
+# EXPOSE 8080
 
-# Change this to match the name of your project.
-ENTRYPOINT ["dotnet", "dwt.dll"]
+# # Change this to match the name of your project.
+# ENTRYPOINT ["dotnet", "dwt.dll"]
