--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -63,7 +63,7 @@ jobs:
 
   TestDockerfileWindows:
     needs: BuildAndTest
-    runs-on: windows-latest
+    runs-on: windows-2022
     strategy:
       matrix:
         platforms: [ 'windows/amd64' ]
@@ -71,12 +71,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
       - name: Build Docker image for ${{ matrix.platforms }}
-        # Use mr-smithers-excellent/docker-build-push@v6 as docker/build-push-action@v6 does not support Windows yet
+        # Use mr-smithers-excellent/docker-build-push as docker/build-push-action requires docker/setup-buildx-action which does not support Windows yet
         # Monitor this issue https://github.com/docker/build-push-action/issues/18
-        # uses: docker/build-push-action@v6
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
           platform: ${{ matrix.platforms }}
