--- a/Dockerfile.win
+++ b/Dockerfile.win
@@ -2,9 +2,10 @@
 # syntax=docker/dockerfile:1
 
 ARG DOTNETVERSION=8.0
+ARG BASEIMAGE=nanoserver-ltsc2022
 
 # Version of the Windows image must match the host OS version (e.g. both must be 2022).
-FROM mcr.microsoft.com/dotnet/sdk:$DOTNETVERSION-nanoserver-ltsc2022 AS build
+FROM mcr.microsoft.com/dotnet/sdk:$DOTNETVERSION-$BASEIMAGE AS build
 
 COPY . /source
 WORKDIR /source
@@ -19,30 +20,27 @@ ARG PROJECT=dwt
 
 # Build the application.
 RUN echo %PROJECT% is running on %BUILDPLATFORM%, building for %TARGETPLATFORM% (%TARGETARCH%)
-RUN echo $PROJECT is running on $BUILDPLATFORM, building for $TARGETPLATFORM ($TARGETARCH)
-RUN echo ${PROJECT} is running on ${BUILDPLATFORM}, building for ${TARGETPLATFORM} (${TARGETARCH})
-RUN echo $(PROJECT) is running on $(BUILDPLATFORM), building for $(TARGETPLATFORM) ($(TARGETARCH))
-# RUN dotnet restore -a ${TARGETARCH} ${PROJECT}.csproj
-# RUN dotnet publish ${PROJECT}.csproj -a ${TARGETARCH} --no-restore -o /app
+RUN dotnet restore %PROJECT%.csproj
+RUN dotnet publish %PROJECT%.csproj --no-restore -o /app
 
 # ################################################################################
 
 # # If you need to enable globalization and time zones:
 # # https://github.com/dotnet/dotnet-docker/blob/main/samples/enable-globalization.md
 
-# FROM mcr.microsoft.com/dotnet/aspnet:$DOTNETVERSION-nanoserver-1809 AS final
-# WORKDIR /app
+FROM mcr.microsoft.com/dotnet/aspnet:$DOTNETVERSION-$BASEIMAGE AS final
+WORKDIR /app
 
-# COPY --from=build /app ./
-# COPY ./config ./config
-# COPY ./data ./data
+COPY --from=build /app ./
+COPY ./config ./config
+COPY ./data ./data
 
 # # Create a non-privileged user that the app will run under.
 # # See https://docs.docker.com/go/dockerfile-user-best-practices/
-# USER appuser
+USER appuser
 
 # # Default port for dotnet application
-# EXPOSE 8080
+EXPOSE 8080
 
 # # Change this to match the name of your project.
-# ENTRYPOINT ["dotnet", "dwt.dll"]
+ENTRYPOINT ["dotnet", "dwt.dll"]
