customize release notes using .semrelease/this_release

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -115,6 +115,23 @@ jobs:
                 prerelease: false,
               });
               console.log('✅ Created release: ', release);
+      - name: Cleanup file .semrelease/this_release
+        run: |
+          RESULT='${{ needs.ReleaseDryRun.outputs.RESULT }}'
+          if [ "${RESULT}" == "SUCCESS" ]; then
+            VERSION='${{ needs.ReleaseDryRun.outputs.VERSION }}'
+            echo "🕘 Cleaning up file .semrelease/this_release..."
+            echo "# This file has been cleaned up post-releasing version ${VERSION}." > .semrelease/this_release
+            echo "# Generate its content quickly using the following command:" >> .semrelease/this_release
+            echo "#   git log origin..HEAD | grep \"^\s\" > .semrelease/this_release" >> .semrelease/this_release
+            git config --global user.email "<>"
+            git config --global user.name "CI Build"
+            git commit -am "Cleanup file .semrelease/this_release post-releasing version ${VERSION}"
+            git push -f
+            echo "✅ Done."
+          else
+            echo "❎ SKIPPED."
+          fi
 
   MergeToMain:
     runs-on: ubuntu-latest
