Add Dockerfile for linux

--- a/content/Dwt/Dockerfile
+++ b/content/Dwt/Dockerfile
@@ -2,9 +2,10 @@
 # syntax=docker/dockerfile:1
 
 ARG DOTNETVERSION=8.0
+ARG BASEIMAGE=alpine
 
 # Use --platform=$BUILDPLATFORM in order to correctly pull the base image for the build platform.
-FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:$DOTNETVERSION-alpine AS build
+FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:$DOTNETVERSION-$BASEIMAGE AS build
 
 COPY . /source
 WORKDIR /source
@@ -13,26 +14,25 @@ ARG TARGETARCH
 ARG BUILDPLATFORM
 ARG TARGETPLATFORM
 
-# This is the project name, used to build the application.
-# Change this to match the name of your project.
-ARG PROJECT=dwt
-
 # Build the application.
-RUN echo "$PROJECT is running on $BUILDPLATFORM, building for $TARGETPLATFORM ($TARGETARCH)"
-RUN dotnet restore -a ${TARGETARCH} ${PROJECT}.csproj
-RUN dotnet publish ${PROJECT}.csproj -a ${TARGETARCH} --no-restore -o /app
+RUN echo "Running on $BUILDPLATFORM, building for $TARGETPLATFORM ($TARGETARCH)"
+RUN dotnet restore -a ${TARGETARCH}
+RUN dotnet publish -a ${TARGETARCH} --no-restore --property:PublishDir=/app
 
 ################################################################################
 
 # If you need to enable globalization and time zones:
 # https://github.com/dotnet/dotnet-docker/blob/main/samples/enable-globalization.md
 
-FROM mcr.microsoft.com/dotnet/aspnet:$DOTNETVERSION-alpine AS final
+FROM mcr.microsoft.com/dotnet/aspnet:$DOTNETVERSION-$BASEIMAGE AS final
 WORKDIR /app
 
+# Change this to match the name of your application.
+ARG BASENAME="Dwt"
+
 COPY --from=build /app ./
-COPY ./config ./config
-COPY ./data ./data
+COPY ${BASENAME}.Api/config ./config
+COPY ${BASENAME}.Api/data ./data
 
 # Create a non-privileged user that the app will run under.
 # See https://docs.docker.com/go/dockerfile-user-best-practices/
@@ -50,5 +50,5 @@ USER appuser
 # Default port for dotnet application
 EXPOSE 8080
 
-# Change this to match the name of your project.
-ENTRYPOINT ["dotnet", "dwt.dll"]
+# Change "Dwt.Api.dll" to match the name of your application.
+ENTRYPOINT ["dotnet", "Dwt.Api.dll"]
