--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -74,7 +74,7 @@ jobs:
     strategy:
       matrix:
         platforms: [ 'linux/amd64', 'linux/arm64' ]
-    name: Test building Docker images for Linux from the original template
+    name: Test building Docker image(s) for Linux from the original template
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -89,53 +89,25 @@ jobs:
           file: ${{ env.TEMPLATE_ROOT }}/Dockerfile
           context: ${{ env.TEMPLATE_ROOT }}
 
-  # TestDockerfileWindows:
-  #   needs: BuildAndTest
-  #   runs-on: windows-2022
-  #   strategy:
-  #     matrix:
-  #       platforms: [ 'windows/amd64' ]
-  #   name: Test building Docker images for Windows
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-  #     - name: Build Docker image for ${{ matrix.platforms }}
-  #       # Use mr-smithers-excellent/docker-build-push as docker/build-push-action requires docker/setup-buildx-action which does not support Windows yet
-  #       # Monitor this issue https://github.com/docker/build-push-action/issues/18
-  #       uses: mr-smithers-excellent/docker-build-push@v6
-  #       with:
-  #         platform: ${{ matrix.platforms }}
-  #         registry: test
-  #         image: test
-  #         tags: test
-  #         pushImage: false
-  #         dockerfile: ./Dockerfile.win
-  #         directory: ./
-
-  # ReleaseDryRun:
-  #   if: github.event_name == 'push'
-  #   needs: BuildAndTest
-  #   runs-on: ubuntu-latest
-  #   outputs:
-  #     RESULT: ${{ steps.release_dry_run.outputs.result }}
-  #     VERSION: ${{ steps.release_dry_run.outputs.releaseVersion }}
-  #     RELEASE_NOTES: ${{ steps.release_dry_run.outputs.releaseNotes }}
-  #   steps:
-  #     - name: Check out code
-  #       uses: actions/checkout@v4
-  #     - name: Install Node
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 'lts/*'
-  #     - name: Release (dry-run)
-  #       id: release_dry_run
-  #       uses: btnguyen2k/action-semrelease@v3
-  #       with:
-  #         dry-run: true
-  #         auto-mode: true
-  #         github-token: ${{ secrets.GITHUB_TOKEN }}
-  #         tag-major-release: false
-  #         tag-minor-release: false
-  #         branches: ${{ github.ref_name }}
-  #         tag-prefix: ${{ env.TAG_PREFIX }}
-  #         tag-only: true
+  TestDockerfileWindowsTemplate:
+    needs: BuildAndTestTemplate
+    runs-on: windows-2022
+    strategy:
+      matrix:
+        platforms: [ 'windows/amd64' ]
+    name: Test building Docker image(s) for Windows from the original template
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Build Docker image for ${{ matrix.platforms }}
+        # Use mr-smithers-excellent/docker-build-push as docker/build-push-action requires docker/setup-buildx-action which does not support Windows yet
+        # Monitor this issue https://github.com/docker/build-push-action/issues/18
+        uses: mr-smithers-excellent/docker-build-push@v6
+        with:
+          platform: ${{ matrix.platforms }}
+          registry: test
+          image: test
+          tags: test
+          pushImage: false
+          dockerfile: ${{ env.TEMPLATE_ROOT }}/Dockerfile.win
+          directory: ${{ env.TEMPLATE_ROOT }}/
