--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -118,7 +118,7 @@ jobs:
     strategy:
       matrix:
         dotnet: [ '8.x', '9.x' ]
-    name: Build and test the generated solution with dotnet ${{ matrix.dotnet }}
+    name: (Linux) Build and test the generated solution with dotnet ${{ matrix.dotnet }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -157,7 +157,7 @@ jobs:
     strategy:
       matrix:
         dotnet: [ '8.x', '9.x' ]
-    name: Build and test the generated solution with dotnet ${{ matrix.dotnet }}
+    name: (Windows) Build and test the generated solution with dotnet ${{ matrix.dotnet }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -186,12 +186,14 @@ jobs:
         run: |
           cd temp
           dotnet test --no-restore
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v3
       - name: Build Docker image
-        uses: docker/build-push-action@v6
+        # Use mr-smithers-excellent/docker-build-push as docker/build-push-action requires docker/setup-buildx-action which does not support Windows yet
+        # Monitor this issue https://github.com/docker/build-push-action/issues/18
+        uses: mr-smithers-excellent/docker-build-push@v6
         with:
-          push: false
+          registry: test
+          image: test
           tags: test
-          file: temp/Dockerfile.win
-          context: temp/
+          pushImage: false
+          dockerfile: temp/Dockerfile.win
+          directory: temp/
