--- a/Ddth.Templates.WebApi.csproj
+++ b/Ddth.Templates.WebApi.csproj
@@ -4,15 +4,15 @@
     <!-- The package metadata. Fill in the properties marked as TODO below -->
     <!-- Follow the instructions on https://learn.microsoft.com/en-us/nuget/create-packages/package-authoring-best-practices -->
     <PackageId>Ddth.Templates.WebApi</PackageId>
-    <PackageVersion>0.0.0</PackageVersion>
+    <PackageVersion><<VERSION>></PackageVersion>
     <Title>.Net WebApi Template</Title>
     <Authors>DDTH;btnguyen2k</Authors>
     <Description>Template to quickly spin up a .NET Web API project.</Description>
     <PackageTags>template, webapi, api</PackageTags>
     <PackageProjectUrl>https://github.com/btnguyen2k/dotnet-webapi-template</PackageProjectUrl>
 
-    <!-- <PackageLicenseExpression>MIT</PackageLicenseExpression> -->
-    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <!-- <PackageLicenseFile>LICENSE.md</PackageLicenseFile> -->
     <Copyright>Copyright (c) 2024 DDTH/Thanh Ba Nguyen</Copyright>
 
     <!-- Keep package type as 'Template' to show the package as a template package on nuget.org and make your template available in dotnet new search.-->
@@ -24,12 +24,15 @@
     <NoWarn>$(NoWarn);NU5128</NoWarn>
     <NoDefaultExcludes>true</NoDefaultExcludes>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <PackageReleaseNotes>See RELEASE-NOTES.md</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup>
     <RepositoryUrl>https://github.com/btnguyen2k/dotnet-webapi-template</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <PackageReleaseNotes>See https://github.com/btnguyen2k/dotnet-webapi-template/releases/v<<VERSION>></PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup>
