--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -36,7 +36,12 @@ jobs:
       # If this step fails, then you should remove it and run the build manually (see below)
       # ℹ️ Command-line programs to run using the OS shell.
       # 📚 https://git.io/JvXDl
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
+      # - name: Autobuild
+        # uses: github/codeql-action/autobuild@v3
+      - name: Build
+        run: |
+          sed -i -E "s/<<VERSION>>/0.0.0/" Ddth.Templates.WebApi.csproj
+          dotnet build
+          cd content/consoleasync/ && dotnet build
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
