cleanup & add GenericRepository

--- a/content/Dwt/Dwt.Api/Dwt.Api.csproj
+++ b/content/Dwt/Dwt.Api/Dwt.Api.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Dwt.Shared.EF\Dwt.Shared.EF.csproj" />
     <ProjectReference Include="..\Dwt.Shared\Dwt.Shared.csproj" />
   </ItemGroup>
 
